[package]
name = "embedded-radio-async"
description = "Generic asynchronous traits for embedded packet radio devices"
version = "0.0.1"
categories = ["asynchronous", "embedded", "hardware-support", "no-std", "development-tools::testing"]
keywords = [ "radio", "mock", "async", "embedded", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/varraen/radio-async-rs"
edition = "2024"

[dependencies]
embedded-hal-async = { version = "1.0", optional = true }
heapless = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }

[features]
default = []
std = []
mock = ["embedded-hal-async", "heapless"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]



